[gd_scene load_steps=7 format=3 uid="uid://dodyvj3itrwoa"]

[ext_resource type="Script" path="res://world/world.gd" id="1_wwhb7"]
[ext_resource type="Script" path="res://spawners/player_spawner.gd" id="2_heo8v"]
[ext_resource type="Script" path="res://spawners/projectile_spawner.gd" id="2_l7ww2"]
[ext_resource type="Script" path="res://core/camera.gd" id="2_syy4v"]
[ext_resource type="Script" path="res://spawners/particle_spawner.gd" id="4_bgr11"]
[ext_resource type="PackedScene" uid="uid://cp3e6bgf4vq28" path="res://indicators/tracking_orb.tscn" id="6_fiu4g"]

[node name="World" type="Node2D"]
script = ExtResource("1_wwhb7")

[node name="PlayerSpawn" type="Marker2D" parent="."]

[node name="MainCamera" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
script = ExtResource("2_syy4v")

[node name="ShakeTimer" type="Timer" parent="MainCamera"]

[node name="BreakableNest" type="Node" parent="."]

[node name="CollectableNest" type="Node" parent="."]

[node name="EnemyNest" type="Node" parent="."]

[node name="ProjectileNest" type="Node" parent="."]
script = ExtResource("2_l7ww2")

[node name="PlayerNest" type="Node" parent="."]
script = ExtResource("2_heo8v")

[node name="TileMapLayer" type="TileMapLayer" parent="."]

[node name="ParticleNest" type="Node" parent="."]
script = ExtResource("4_bgr11")

[node name="IndicatorNext" type="Node" parent="."]

[node name="PlayerTrackingOrb" parent="IndicatorNext" instance=ExtResource("6_fiu4g")]
